Fixed bug #79022 (class_exists returns True for classes that are not ready to be used)